--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,9 @@ button{
 		background-color: rgba(0, 0, 0, 0.7);
 	}
 }
+.unset-prev{
+	all: unset;
+}
 section{ 
 	display: flex;
 	align-items: center;
